--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "build:watching": "tsc -w",
+    "start:production": "node ./dist/app/server.js",
+    "start:development": "nodemon ./dist/app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
