--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "@types/validator": "^13.11.10",
-    "eslint": "^9.4.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.57.0",
     "globals": "^15.4.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
